# itlab_2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml  self-hosted.yml
algo/: CMakeLists.txt
algo/headers/: BMP.hpp  Color.hpp  Function.hpp  Structer.hpp  data_render.hpp
algo/sources/: Function.cpp
algorithms/headers/: filter.hpp  function.hpp
algorithms/sources/: function.cpp
benchmarks/headers/: benchmark.hpp  timer.hpp
benchmarks/sources/: timer.cpp
cmake/: gtest.cmake
generating_data/headers/: bmp.hpp  color.hpp  generating_data.hpp  structer.hpp
headers/: BMP.hpp  Color.hpp  Function.hpp  Imaging.hpp  Structer.hpp  gen_rand_data.hpp
sources/: BMP.cpp  Imaging.cpp
tests/: CMakeLists.txt  main.cpp
